--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,1 +1,9 @@
 @charset "UTF-8";
+
+:root {
+    --cor0: #D8F2F0;
+    --cor1: #ACF2DE;
+    --cor2: #77D9BD;
+    --cor3: #60BFA4;
+    --cor4: #05A678;
+}
