--- a/estudos/style.css
+++ b/estudos/style.css
@@ -5,3 +5,50 @@
     --laranja: #F2913D;
     --amarelo: #F2B441;
 }
+
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
+}
+
+html, body {
+    background-color: var(--cinza);
+    width: 100vw;
+    height: 100vh;
+}
+
+main {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+}
+
+#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+
+    background-color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+#imagem {
+    display: block;
+    background: var(--cinza) url(../imagens/predio.jpg) no-repeat;
+    height: 200px;
+    background-size: cover;
+    background-position: top center;
+}
+
+#formulario {
+    display: block;
+    padding: 10px;
+}
