--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,6 +38,9 @@ main {
 
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 #imagem {
