--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,6 +2,7 @@
 
 :root {
     --cinza: #2C3740;
+    --azul: #234966;
     --laranja: #F2913D;
     --amarelo: #F2B441;
 }
@@ -32,7 +33,7 @@ main {
     transform: translate(-50%, -50%);
     overflow: hidden;
 
-    width: 250px;
+    width: 260px;
     height: 500px;
     border-radius: 20px;
 
@@ -63,4 +64,56 @@ main {
 
 #formulario p {
     font-size: 0.8em;
+}
+
+.campo {
+    background-color: var(--cinza);
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+label {
+    display: none;
+}
+
+input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    color: white;
+    background-color: var(--amarelo);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: var(--laranja);
+}
+
+.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    margin-top: 5px;
+    padding-top: 5px;
+    color: var(--amarelo);
+    background-color: white;
+    border: 1px solid var(--amarelo);
+    border-radius: 7px;
+    text-decoration: none;
+}
+
+.botao:hover {
+    background-color: #ffeac4;
+}
+
+.botao  span {
+    font-size: 0.9em;
 }
