--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -16,14 +16,14 @@
     --amarelo: #F2B441;
 }
 
-@media screen and (min-width:768px) and (max-width: 992px) {
+@media screen and (min-width:768px) and (max-width: 992px) { /*Tablet*/
     body {
         background-image: linear-gradient(to top, var(--cinza), var(--azul));
     }
     
     #login {
         width: 80vw;
-
+        height: 280px;
     }
 
     #imagem {
@@ -38,13 +38,14 @@
     }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 992px) { /*Desktop*/
     body {
         background-image: linear-gradient(to top, var(--cinza), var(--azul));
     }
 
     #login {
         width: 950px;
+        height: 350px;
     }
 
     #imagem {
@@ -63,6 +64,7 @@
     }
 
     #formulario p {
-        font-size: 1.2em;
+        font-size: 1.05em;
+        margin: 25px 0px;
     }
 }
