--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,7 +30,6 @@ main {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
 
     width: 260px;
@@ -40,6 +39,7 @@ main {
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 
+    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
@@ -68,15 +68,38 @@ main {
 
 .campo {
     background-color: var(--cinza);
+    border: 2px solid var(--cinza);
     width: 100%;
     display: block;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 
-label {
+.campo label {
     display: none;
+}
+
+.campo span {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+.campo input {
+    background-color: #bfe1fc;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: 0px;
+    border-radius: 6px;
+    padding: 4px;
+    transform: translateY(-12px);
+}
+
+.campo input:focus-within {
+    background-color: white;
 }
 
 input[type=submit] {
@@ -114,6 +137,7 @@ input[type=submit]:hover {
     background-color: #ffeac4;
 }
 
-.botao  span {
+.botao span {
     font-size: 0.9em;
+    transform: translateY(3px);
 }
